# iniparser

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  config.ini  example.c
include/: iniparser.h
src/: iniparser.c
